2004-09-18  Luc Teirlinck  <teirllm@auburn.edu>

	* textmodes/enriched.el (enriched-rerun-flag): New variable.
	(enriched-before-change-major-mode): New function.
	Add it to `change-major-mode-hook'.
	(enriched-after-change-major-mode): New function.
	Add it to `after-change-major-mode-hook'.
	(enriched-mode): Make it work correctly if called from
	`after-change-major-mode-hook'.
	No longer set `indent-line-function'.

	* simple.el (fundamental-mode): Run `after-change-major-mode-hook'.

	* subr.el (after-change-major-mode-hook): New variable.
	(run-mode-hooks): Implement it.

2004-09-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* battery.el (battery-linux-proc-apm): Use string-to-number.
	(battery-linux-proc-acpi): Ignore all hidden files in the battery dir.
	Use dolist (and less indentation).  Use erase-buffer.
	Pre-initialize `design-capacity', `warn', and `low'.
	(battery-format): Use replace-regexp-in-string.

2004-09-18  Ralph Schleicher  <rs@nunatak.allgaeu.org>

	* battery.el: Delete superfluous empty lines.
	(battery-linux-proc-acpi): Attempt to gather information from all
	battery subdirectories regardless of their file name.
	(battery-linux-proc-apm): Replace all occurrences of
	battery-hex-to-int-2 with string-to-int (base 16).
	(battery-hex-to-int-2, battery-hex-to-int): Delete functions.
	(battery-hex-map): Delete variable.

2004-09-18  John Paul Wallington  <jpw@gnu.org>

	* calc/calc-units.el (calc-quick-units): Fix overzealous
	s/or/unless/.

2004-09-17  Romain Francoise  <romain@orebokech.com>

	* ibuf-ext.el (define-ibuffer-filter filename):
	Expand dired-directory since buffer-file-name is absolute.

2004-09-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* ediff-init.el (ediff-current-diff-face-A)
	(ediff-current-diff-face-B, ediff-current-diff-face-C)
	(ediff-current-diff-face-Ancestor)
	(ediff-fine-diff-face-A, ediff-fine-diff-face-B)
	(ediff-fine-diff-face-C, ediff-fine-diff-face-Ancestor)
	(ediff-even-diff-face-A, ediff-even-diff-face-B)