@@ -1,3 +1,7 @@
+2004-09-19  Stefan  <monnier@iro.umontreal.ca>
+
+	* subr.el (event-basic-type): Fix mask (extend to 22bits).
+
 2004-09-18  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* textmodes/enriched.el (enriched-rerun-flag): New variable.
